test/spec_vectors/simd_i16x8_cmp/fail/module_21.wat
(module (func $i16x8.le_s-arg-empty (result v128) (i16x8.le_s)))